# pattern_roller_maker

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yml
src/: circles.rs  cli.rs  construct.rs  eartrim.rs  image.rs  lib_arguments.rs  lib_geometry.rs  main.rs  parameters.rs  split.rs  stl.rs  test_lib_arguments.rs  test_lib_geometry.rs  vectors.rs
